connector-kube: Add endpoint for deployments
