# fetch-api/connectors/kube/src/dto/request/workloads.go
@@ -1,0 +1,6 @@
+package request
+
+
+type ListDeploymentsParams struct {
+	Namespace             string `query:"namespace"`
+}
